# desafio_c2s_python

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml
src/agent/: terminal_agent.py
src/core/: __init__.py  database.py
src/mcp_tool_server/: server_mcp_stdio.py  tool_definitions.py  tool_logic.py
src/models/: __init__.py  automovel_model.py
src/scripts/: mcp_client_teste.py  populate_db.py
src/services/: mcp_server.py
tests/agent/: test_terminal_agent.py
tests/models/: test_automovel_model.py
tests/services/: test_mcp_server.py
